--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
+    <h1 class="hidden-heading">Product-preview-card</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
